--- a/TshirtSize/index.html
+++ b/TshirtSize/index.html
@@ -33,19 +33,19 @@
                   min="1"
                   class="form-control form-control-lg"
                   id="height"
-                  placeholder="Enter Your T-shirt Height"
+                  placeholder="Enter Your Height"
                   required="true"
                 />
               </div>
               <div class="my-3">
-                <label for="width">Width (in cm):</label>
+                <label for="weight">Weight (in kg):</label>
                 <input
                   type="number"
-                  name="width"
+                  name="weight"
                   min="1"
                   class="form-control form-control-lg"
-                  id="width"
-                  placeholder="Enter Your T-shirt Width"
+                  id="weight"
+                  placeholder="Enter Your weight"
                   required="true"
                 />
               </div>
@@ -64,10 +64,10 @@
               </div>
               <div class="my-3">
                 <label for="algorithm">Distance Function:</label>
-                <select class="form-control" name="algorithm" id="algorithm">
-                  <option value="0" selected>
-                    Euclidian Distance Function
-                  </option>
+                <select class="form-select form-select-lg" name="algorithm" id="algorithm">
+                    <option value="0" selected>
+                      Euclidian Distance Function
+                    </option>
                   <option value="1">Manhattan Distance Function</option>
                 </select>
               </div>
