--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="card-body">
                   <a
-                    href="/TshirtSize/"
+                    href="https://shariar-hasan.github.io/ToolsHub/TshirtSize/"
                     class="btn btn-block btn-lg btn-outline-primary w-100"
                     >Visit Page ➡️</a
                   >
@@ -69,7 +69,7 @@
                 </div>
                 <div class="card-body">
                   <a
-                    href="/EditDistance/"
+                    href="https://shariar-hasan.github.io/ToolsHub/EditDistance/"
                     class="btn btn-block btn-lg btn-outline-primary w-100"
                     >Visit Page ➡️</a
                   >
