--- a/EditDistance/index.html
+++ b/EditDistance/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Word Operation Count</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="shortcut icon"
       href="./../assets/favicon.png"
       type="image/x-icon"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
-      integrity="sha512-t4GWSVZO1eC8BM339Xd7Uphw5s17a86tIZIj8qRxhnKub6WoyhnrxeCIMeAqBPgdZGlCcG2PrZjMc+Wr78+5Xg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <title>Word Operation Count</title>
   </head>
   <body>
     <div class="container mt-5">
       <h1 class="my-4 text-center text-primary">Edit Distance Calculator</h1>
-      <div class="row">
-        <div class="col-md-6 my-3">
+      <div class="row h-auto d-flex flex-wrap">
+        <div class="col-md-6 col-12 my-3">
           <form action="#" id="edistance-form">
             <div class="shadow border p-4 rounded-2">
               <div class="my-3">
@@ -59,16 +59,21 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 my-3">
+        <div class="col-md-6 col-12 my-3">
           <div id="result" class="shadow border p-4 rounded-2">
             <h4 class="">Waiting for the calculation.......</h4>
-            
           </div>
         </div>
       </div>
     </div>
 
     <!-- Add Bootstrap and custom JavaScript -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="./operation.js"></script>
     <script src="./main.js"></script>
   </body>
