--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Tools Hub is a Tools website which have various tools, that uses machine learning algorithms and methods for calculation or operation or prediction. This tools are very easy to use and handy. A person can easily get adjust to its usage."
+    />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -11,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Distance Detection</title>
+    <title>Tools Hub</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -43,7 +47,7 @@
                 </div>
                 <div class="card-body">
                   <a
-                    href="https://shariar-hasan.github.io/ToolsHub/TshirtSize/"
+                    href="./TshirtSize/"
                     class="btn btn-block btn-lg btn-outline-primary w-100"
                     >Visit Page ➡️</a
                   >
@@ -70,7 +74,7 @@
                 </div>
                 <div class="card-body">
                   <a
-                    href="https://shariar-hasan.github.io/ToolsHub/EditDistance/"
+                    href="./EditDistance/"
                     class="btn btn-block btn-lg btn-outline-primary w-100"
                     >Visit Page ➡️</a
                   >
