--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   alt=""
                 />
                 <div class="card-body">
-                  <h4 class="card-title text-primary">Word Operation Count</h4>
+                  <h4 class="card-title text-primary">Edit Distance Operation</h4>
                   <p class="card-text text-muted text-justify">
                     This web app which have UI consists of two input fields
                     where the user can enter the two words they want to compare.
