--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
                     T-Shirt Size Detection
                   </h4>
                   <p class="card-text text-muted text-justify">
-                    It is an innovative web app that helps you find your perfect
-                    t-shirt size using the power of Machine Learning. It
-                    utilizes the K-Nearest Neighbors (KNN) algorithm to predict
-                    your ideal t-shirt size based on your height and width
-                    measurements. With it, you can say goodbye to ill-fitting
-                    t-shirts and confidently order your preferred size online.
+                    Its a simple tool for calculating the predicted size of the
+                    t-shirt of anyone by using machine learning algorithm .
                   </p>
                 </div>
                 <div class="card-body">
@@ -62,14 +58,13 @@
                   alt=""
                 />
                 <div class="card-body">
-                  <h4 class="card-title text-primary">Edit Distance Operation</h4>
+                  <h4 class="card-title text-primary">
+                    Edit Distance Operation
+                  </h4>
                   <p class="card-text text-muted text-justify">
-                    This web app which have UI consists of two input fields
-                    where the user can enter the two words they want to compare.
-                    After entering the words, they can click the "Calculate"
-                    button, and the app will display the edit distance value and
-                    the sequence of operations needed to transform the first
-                    word into the second  word.
+                    Compares between two words and determine the number of
+                    operation (insertion, detetion, exchange) need to make one
+                    word to another.
                   </p>
                 </div>
                 <div class="card-body">
