decimal point issue fix fix

--- a/TshirtSize/index.html
+++ b/TshirtSize/index.html
@@ -31,7 +31,8 @@
                 <input
                   name="height"
                   type="number"
-                  min="1"
+                  min="1.0"
+                  step="any"
                   class="form-control form-control-lg"
                   id="height"
                   placeholder="Enter Your Height"
@@ -43,7 +44,8 @@
                 <input
                   type="number"
                   name="weight"
-                  min="1"
+                  min="1.0"
+                  step="any"
                   class="form-control form-control-lg"
                   id="weight"
                   placeholder="Enter Your weight"
