--- a/EditDistance/index.html
+++ b/EditDistance/index.html
@@ -88,6 +88,14 @@
       </div>
     </div>
 
+    <div class="text-center my-5">
+      <a href="./../TshirtSize/">
+        <button class="btn btn-secondary">⬅️ T Shirt Size Prediction</button>
+      </a>
+      <a href="./../K-MeanClustering/">
+        <button class="btn btn-secondary">K Means Clustering ➡️</button>
+      </a>
+    </div>
     <!-- Add Bootstrap and custom JavaScript -->
 
     <script
