--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-6">
+              <div class="card p-3 m-2">
+                <img
+                  class="card-img-top mx-auto"
+                  src="./assets/edc.png"
+                  alt=""
+                />
+                <div class="card-body">
+                  <h4 class="card-title text-primary">
+                    K Means Clustering
+                  </h4>
+                  <p class="card-text text-muted text-justify">
+                    Compares between two words and determine the number of
+                    operation (insertion, detetion, exchange) need to make one
+                    word to another.
+                  </p>
+                </div>
+                <div class="card-body">
+                  <a
+                    href="./K-MeanClustering/"
+                    class="btn btn-block btn-lg btn-outline-primary w-100"
+                    >Visit Page ➡️</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
