--- a/TshirtSize/index.html
+++ b/TshirtSize/index.html
@@ -18,6 +18,7 @@
     <title>T-Shirt Size Predictor</title>
   </head>
   <body>
+    <div class="body"></div>
     <div class="container mt-5">
       <h1 class="mb-4 text-center text-primary">T-Shirt Size Predictor</h1>
       <div class="row">
@@ -31,7 +32,6 @@
                 <input
                   name="height"
                   type="number"
-                  min="1.0"
                   step="any"
                   class="form-control form-control-lg"
                   id="height"
@@ -44,7 +44,6 @@
                 <input
                   type="number"
                   name="weight"
-                  min="1.0"
                   step="any"
                   class="form-control form-control-lg"
                   id="weight"
@@ -57,10 +56,9 @@
                 <input
                   type="number"
                   name="kvalue"
-                  min="1"
                   class="form-control form-control-lg"
                   id="kvalue"
-                  placeholder="Enter Value of K "
+                  placeholder="Enter Value of K (ODD value recommended)"
                   required="true"
                   list="k-value-list"
                 />
@@ -131,6 +129,15 @@
       </div>
     </div>
 
+    <div class="text-center my-5">
+      <a href="./../K-MeanClustering/">
+        <button class="btn btn-secondary">⬅️ K Means Clustering</button>
+      </a>
+      <a href="./../EditDistance/">
+        <button class="btn btn-secondary">Edit Distance Algorithm ➡️</button>
+      </a>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./data.js"></script>
     <script src="./main.js"></script>
   </body>
