--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="card p-3 m-2">
                 <img
                   class="card-img-top mx-auto"
-                  src="./assets/edc.png"
+                  src="./assets/kmeans.png"
                   alt=""
                 />
                 <div class="card-body">
@@ -88,9 +88,7 @@
                     K Means Clustering
                   </h4>
                   <p class="card-text text-muted text-justify">
-                    Compares between two words and determine the number of
-                    operation (insertion, detetion, exchange) need to make one
-                    word to another.
+                    Divided into classes according to the clusters and their centroids
                   </p>
                 </div>
                 <div class="card-body">
