--- a/EditDistance/index.html
+++ b/EditDistance/index.html
@@ -8,30 +8,32 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./../style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
+      type="text/css"
     />
+
     <title>Word Operation Count</title>
   </head>
-  <body>
-    <div class="container mt-5">
-      <h1 class="my-4 text-center text-primary">Edit Distance Calculator</h1>
-      <div class="row h-auto d-flex flex-wrap">
-        <div class="col-md-6 col-12 my-3">
-          <form action="#" id="edistance-form">
-            <div class="shadow border p-4 rounded-2">
+  <body class=" transition-colors duration-300">
+    <div class="container mx-auto p-5">
+      <h1 class="my-4 text-center text-accent text-4xl">
+        Edit Distance Calculator
+      </h1>
+      <div class="grid grid-cols-12 gap-4">
+        <div class="col-span-12 md:col-span-6 my-3">
+          <form action="#" id="edistance-form" autocomplete="off">
+            <div class="shadow border p-4 rounded-lg bg-gray -900 text-white py-10">
               <div class="my-3">
                 <label for="word1">Source Word :</label>
                 <input
                   type="text"
                   name="word1"
-                  class="form-control form-control-lg"
+                  class="input py-3 px-4 bg-gray-700 block w-full my-2"
                   id="word1"
                   placeholder="Write First Word"
-                  required="true"
                   autocomplete="off"
                 />
               </div>
@@ -40,19 +42,18 @@
                 <input
                   type="text"
                   name="word2"
-                  class="form-control form-control-lg"
+                  class="input py-3 px-4 bg-gray-700 block w-full my-2"
                   id="word2"
                   placeholder="Write Second Word"
-                  required="true"
                   autocomplete="off"
                 />
               </div>
-              <div class="my-3 d-flex flex-column">
-                <div class="flex-grow-1 my-2 d-flex">
+              <div class="my-3 flex flex-col">
+                <div class="flex-grow my-2 flex items-center justify-between">
                   <button
                     id="defaultBtn"
                     type="button"
-                    class="btn btn-outline-primary btn-lg btn-block flex-grow-1 mx-1"
+                    class="btn btn-info btn-outline flex-grow mx-1 click-effect"
                     onclick="defaultSet()"
                   >
                     Default Values 📌
@@ -60,8 +61,8 @@
                   <button
                     id="resetBtn"
                     type="button"
-                    class="btn btn-outline-primary btn-lg btn-block flex-grow-1 mx-1"
-                    onclick="reset()"
+                    class="btn text-primary  mx-1 click-effect"
+                    onclick="resetAll()"
                   >
                     Reset All ✖️
                   </button>
@@ -70,7 +71,7 @@
                 <button
                   id="calculateBtn"
                   type="submit"
-                  class="btn btn-primary btn-lg btn-block w-100"
+                  class="btn btn-success btn-outline btn-block mt-2"
                 >
                   Calculate Distance 🧮
                 </button>
@@ -78,9 +79,9 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 col-12 my-3">
-          <div id="result" class="shadow border p-4 rounded-2">
-            <h4 class="text-center text-danger">
+        <div class="col-span-12 md:col-span-6 my-3">
+          <div id="result" class="shadow border rounded-lg dark:bg-gr ay-800">
+            <h4 class="text-center text-danger text-3xl p-4">
               Fill up the source and target words and hit the calculate button
             </h4>
           </div>
@@ -90,19 +91,19 @@
 
     <div class="text-center my-5">
       <a href="./../TshirtSize/">
-        <button class="btn btn-secondary">⬅️ T Shirt Size Prediction</button>
+        <button class="btn btn-secondary click-effect">
+          ⬅️ T Shirt Size Prediction
+        </button>
       </a>
       <a href="./../K-MeanClustering/">
-        <button class="btn btn-secondary">K Means Clustering ➡️</button>
+        <button class="btn btn-secondary click-effect">
+          K Means Clustering ➡️
+        </button>
       </a>
     </div>
-    <!-- Add Bootstrap and custom JavaScript -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./operation.js"></script>
     <script src="./main.js"></script>
   </body>
