button bug fixed : edit distance page

--- a/EditDistance/index.html
+++ b/EditDistance/index.html
@@ -61,7 +61,7 @@
                   <button
                     id="resetBtn"
                     type="button"
-                    class="btn text-primary  mx-1 click-effect"
+                    class="btn text-info btn-outline  mx-1 click-effect"
                     onclick="resetAll()"
                   >
                     Reset All ✖️
